[project]
name = "langraph-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.5",
    "requests>=2.32.5",
]
